Changelog
=========

1.0b12 (2012-04-17)
-------------------

* Added batching to manager orders view [simu]
* Added back to manage orders link to order detail view [simu]
* Removed possibility to process an order which has previously been failed [simu]

1.0b11 (2012-02-06)
-------------------

* Fixed sorting in manage orders view [simu]
* Added possibility to specify a custom email address for pcommerce related emails [simu]
* View action is used in the url for custom products that use AT file and image as a base [kcleong]
* Fixed bug in payment processor, removed undeclared variable 

1.0b10 (2012-01-23)
-------------------

* fixed norwegian translations
* plone 4.1 compatibility by importing cmfcore permissions
* added norwegian translations (thanks to Espen Moe-Nilssen)

1.0b9 (2011-12-13)
------------------

* updated translations
* added french translations
* fixed bug in payment failed and canceled view where a ValueError was raised if order.processed_steps was empty
* adjusted CSS for the checkout button of the cart view
* rounding values (by default to 5 cents) is now configurable in the
  pcommerce_properties (not in the configlet) [huub_bouma]
* plone4.1 compatability fix (small) [huub_bouma]
* translations now use locales folder, and is now plone4 compatible
* removed a pdb statement. [huub_bouma]
* some PEP8 fixes [huub_bouma]

1.0b8 (2011-09-26)
------------------

* Improved order overview (adjusted total price to include all taxes and charges)
* Added default_view property to Product and Variation type to prevent breaking of plone's new folder_full_view
* Added spanish translations (Thanks to Manuel Gualda Caballero)

1.0b7 (2011-09-01)
------------------

* Added dutch translations 
  (thanks to Kees Hink and Albert Peschar)
* Added order overview (`@@manage-orders`)
  [khink]

1.0b6 (2011-01-5)
------------------

* re-add PTS utility for plone 3 compatibility

1.0b5 (2010-12-22)
------------------
